# TFM_WS_CustomNodes

./: README.md  package.xml
launch/: launch_thermalcamera.py  main_launch.py  rviz2_tfm_config.rviz  watershed_comparison.rviz
launch/antiguo-jetson/: APP.py  NodeLauncher.py
launch/nodos/: AreaSegmentationOptions.py  BiomassOptions.py  GPSCoordinatesOptions.py  NodeLauncher.py  YOLOOptions.py
log/: latest_list
scripts/: GPS_coordinates_node.py  RANSAC.py  area_segmentation_node.py  biomass_node.py  biomass_quantification_node.py  calibration_area.py  classical_rgb_segmentation_node.py  classical_vs_gt_eval.py  crop_light_state_node.py  csv_safecopy.py  depth_pixel_inspector.py  ros2_mqtt_publisher.py  temperature_cswi_calculation.py  utm_base_link_xy.py  volume_estimation_node.py  watershed_segmentation_node.py  yolo_measure_tool.py
